[package]
name = "hexalon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3" }
bevy_egui = "0.22.0"
bevy_mod_picking = { version = "0.15.0", features = ["backend_egui"] }
bevy_mod_reqwest = "0.12.0"
bevy_pancam = "0.9.0"
env_logger = "0.10.0"
futures-lite = "2.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
